log
Fri May 13 03:00:07 UTC 2022: 
 tests:  0|5
total_score: 0/70
0ae7e84
Mon May 16 00:45:34 UTC 2022: 
 sudoku.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
In file included from test.c:5:0:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:59:11: error: expected expression before ‘Node’
           Node * aux = createNode();
           ^~~~
sudoku.c:58:9: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
         if(n->sudo[i][j] == 0)
         ^~
sudoku.c:60:11: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
           aux = copy(n);
           ^~~
sudoku.c:60:11: error: ‘aux’ undeclared (first use in this function)
sudoku.c:60:11: note: each undeclared identifier is reported only once for each function it appears in
cc1: all warnings being treated as errors
Compilation failed
bc1a303
Mon May 16 00:46:49 UTC 2022: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:0:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:59:15: error: ‘k’ undeclared (first use in this function)
           for(k = 0; k < 9; k++){
               ^
sudoku.c:59:15: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
209a908
Mon May 16 00:46:57 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
91a6a23
Mon May 16 02:10:59 UTC 2022: 
 sudoku.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
In file included from test.c:5:0:
sudoku.c: In function ‘is_valid’:
sudoku.c:61:5: error: statement with no effect [-Werror=unused-value]
     aux
     ^~~
sudoku.c:62:3: error: expected ‘;’ before ‘}’ token
   }
   ^
cc1: all warnings being treated as errors
Compilation failed
2b33284
Mon May 16 02:12:45 UTC 2022: 
 sudoku.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
test.c: In function ‘is_valid’:
sudoku.c:51:22: error: ‘j’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
     if(aux[n->sudo[i][j]] == 0 && n->sudo[i][j] != 0) aux[n->sudo[i][j]] = 1;
            ~~~~~~~~~~^~~
sudoku.c:51:11: error: ‘aux’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
     if(aux[n->sudo[i][j]] == 0 && n->sudo[i][j] != 0) aux[n->sudo[i][j]] = 1;
           ^
cc1: all warnings being treated as errors
Compilation failed
f75f2e6
